Resolução display final do btns reef e alga

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="AreaInputPage1">
           <div class="InputsPage1">
             <div class="H2InputsPage1">SCOUTER</div>
-            <input name="Scouter" id="txtScouter" class="TxtAreaPage1" rows="2" cols="50" placeholder="Nome do Scouter..." oninput="validateScouter(this)">>
+            <input name="Scouter" id="txtScouter" class="TxtAreaPage1" rows="2" cols="50" placeholder="Nome do Scouter..." oninput="validateScouter(this)">
           </div>
         <div class="AreaInputPage1">
           <div class="InputsPage1">
