Resolução display final do btns reef e alga v2

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <div class="AreaPaiBtn">
       <div class="Areaborda2btnpage2">
         <div class="Areaeespaçobtn"><div class="espaçobtn"></div></div>
-        <h3 class="H3blocobtn">PROCESSOR AUTO</h3>
+        <h3 class="H3blocobtn">PROCES AUTO</h3>
         <div class="OrganizationDisplay"><div class="AreaDisplayCinza" id="numDisplayProcessoracertadoAuto">0</div></div>
         <p></p>
         <div class="Areabtnstyle">
@@ -330,7 +330,7 @@
   <div class="AreaPaiBtn">
     <div class="Areaborda2btnpage2">
       <div class="Areaeespaçobtn"><div class="espaçobtn"></div></div>
-      <h3 class="H3blocobtn">PROCESSOR TELEOP</h3>
+      <h3 class="H3blocobtn">PROCES TELEOP</h3>
       <div class="OrganizationDisplay"><div class="AreaDisplayCinza" id="numDisplayProcessoracertadoTeleop">0</div></div>
       <p></p>
       <div class="Areabtnstyle">
