Instalação de aplicativo

--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@
 </div>
 <div>
 </div>
+<button id="install-button" style="display: none;">Instalar Aplicativo</button>
 <form  id="FormSheet" method="post" action="" name="contact-form" onsubmit="return confirmarEnvio()">
     <input type="hidden" name="Scouter" id="campoScouter">
     <input type="hidden" name="Regional" id="campoRegional">
